# UI

./: CMakeLists.txt
include/ui/: drawable_interface.hpp  ui_manager.hpp
include/ui/internal/: memory_mode.hpp
include/ui/modules/: canvas.hpp
include/ui/panels/: base_panel.hpp  menu_bar_panel.hpp  transformable_panel.hpp  undecorated_panel.hpp  window_panel.hpp
include/ui/settings/: alignment.hpp  group_widget_settings.hpp  panel_window_settings.hpp
include/ui/styling/: style.hpp
include/ui/types/: color.hpp
include/ui/utils/: converter.hpp  event.hpp
include/ui/widgets/: base_widget.hpp  widget_container.hpp
include/ui/widgets/buttons/: arrow_button.hpp  base_button.hpp  button.hpp  colored_button.hpp  small_button.hpp
include/ui/widgets/drags/: multiple_drags.hpp  single_drag.hpp
include/ui/widgets/inputs/: multiple_numbers_input.hpp  single_number_input.hpp  text_input.hpp
include/ui/widgets/interfaces/: resizable.hpp
include/ui/widgets/layouts/: group.hpp  tree_node.hpp
include/ui/widgets/plots/: base_plot.hpp  plot_lines.hpp
include/ui/widgets/selections/: check_box.hpp
include/ui/widgets/texts/: base_text.hpp  colored_text.hpp  text.hpp  text_filter.hpp
include/ui/widgets/visuals/: image.hpp
src/: ui_manager.cpp
src/modules/: canvas.cpp
src/panels/: base_panel.cpp  menu_bar_panel.cpp  transformable_panel.cpp  undecorated_panel.cpp  window_panel.cpp
src/types/: color.cpp
src/widgets/: base_widget.cpp  widget_container.cpp
src/widgets/buttons/: arrow_button.cpp  base_button.cpp  button.cpp  colored_button.cpp  small_button.cpp
src/widgets/inputs/: text_input.cpp
src/widgets/layouts/: group.cpp  tree_node.cpp
src/widgets/plots/: base_plot.cpp  plot_lines.cpp
src/widgets/selections/: check_box.cpp
src/widgets/texts/: base_text.cpp  colored_text.cpp  text.cpp  text_filter.cpp
src/widgets/visuals/: image.cpp
